--- a/section2-the_basics/src/app/app.component.html
+++ b/section2-the_basics/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h3>Teste teste</h3>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>This is the AppComponent</h3>
+      <hr>
+      <app-servers></app-servers>
+      <!-- <div app-servers=""></div> --> <!-- servers.component com selector definido como atriuto -->
+      <!-- <div class="app-servers"></div> --> <!-- servers.component com selector definido como classe -->
+    </div>
+  </div>
+</div>
