section2-second_assignment

--- a/section2-the_basics/src/app/server/server.component.html
+++ b/section2-the_basics/src/app/server/server.component.html
@@ -1,1 +1,2 @@
-<p>{{ 'Server' }} with ID {{ getServerID() }} is {{ getServerStatus() }}</p>
+<p>{{ 'Server' }} with ID {{ serverID }} is {{ getServerStatus() }}</p>
+<!-- string interpolation --> <!-- é possível inserir funções, porém o retorno deve ser uma string, ou um valor que possa ser convertido para uma string -->
