--- a/section5-components_and_dataBinding/src/app/app.component.html
+++ b/section5-components_and_dataBinding/src/app/app.component.html
@@ -13,7 +13,7 @@
 
         [name]="serverElement.name">
         <!-- [srvElement]="serverElement" -->
-        <p>
+        <p #contentParagraph>
           <strong *ngIf="serverElement.type === 'server'" style="color: 'red'">{{ serverElement.content }}</strong>
           <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
         </p>
