--- a/section7-directives_start/src/app/app.component.html
+++ b/section7-directives_start/src/app/app.component.html
@@ -16,7 +16,7 @@
             {{ odd }}
           </li>
         </div>
-        <div
+        <!-- <div
           *ngIf="!onlyOdd">
           <li
             class="list-group-item"
@@ -37,7 +37,17 @@
               {{ even }}
             </li>
           </div>
-        </ng-template>
+        </ng-template> -->
+        <!-- appUnless == custom structural directive -->
+        <div *appUnless="onlyOdd">
+          <li
+            class="list-group-item"
+            [ngClass]="{even: even % 2 == 0}"
+            [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}"
+            *ngFor="let even of evenNumbers">
+            {{ even }}
+          </li>
+        </div>
       </ul>
       <p appBasicHighlight>Style me with basic directive!</p>
       <!-- | -->
@@ -49,6 +59,12 @@
           Style me with a better directive!
       </p>
       <!-- É possível realizar property binding sem as [] no caso do valor atribuído ser uma string. Assim, é possível remover as [] e as '' da string passada como valor. -->
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault>Value is Default</p>
+      </div>
 
       <!-- <div class="container">
         <div *ngIf="onlyOdd">
