--- a/section16-courseProject_forms/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/section16-courseProject_forms/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,8 +3,8 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
@@ -29,14 +29,15 @@
               type="text"
               id="imagePath"
               formControlName="imagePath"
-              class="form-control">
+              class="form-control"
+              #imagePath>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>
 
@@ -58,8 +59,9 @@
         <div class="col-xs-12" formArrayName="ingredients">
           <div
             class="row"
-            *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
-            [formGroupName]="i">
+            *ngFor="let ingredientCtrl of controls; let i = index"
+            [formGroupName]="i"
+            style="margin-top: 10px;">
             <div class="col-xs-8">
               <input type="text" class="form-control" formControlName="name">
             </div>
@@ -69,7 +71,29 @@
             </div>
 
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">X</button>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="row">
+            <div class="col-xs-6">
+              <button
+                class="btn btn-success"
+                type="button"
+                (click)="onAddIngredient()">
+                  Add Ingredient
+              </button>
+            </div>
+
+            <div class="col-xs-6" style="text-align: end; margin-bottom: 20px">
+              <button
+                class="btn btn-danger"
+                type="button"
+                (click)="onDeleteAllIngredients()">
+                  Delete All Ingredients
+              </button>
             </div>
           </div>
         </div>
